# NumberOfWords

./: .gitignore  CMakeLists.txt  data_rus.txt  file_to_vector.cpp  file_to_vector.h  main.cpp  main.h  multithread.cpp  multithread.h  one_threaded.cpp  one_threaded.h  outA.txt  outN.txt  run.py  time_counting.h
